--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("./assets/DSC_0640.JPG");
+  background-image: url("assets/DSC_0640.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
